--- a/src/Todolist.module.css
+++ b/src/Todolist.module.css
@@ -12,7 +12,7 @@
     font-weight: 600;
 }
 .addTaskForm{
-    margin: 0 0 1rem 0;
+    margin: 0 0 0rem 0;
 }
 
 /*  BUTTONS   */
@@ -36,4 +36,31 @@
     background-color: #41ab7c;
     margin: 0 0.5rem 0 0;
     padding: 0.2rem 0.5rem 0.2rem 0.5rem;
+}
+.btn{
+    cursor: pointer;
+    margin: 0 0.5rem 0 0;
+    padding: 0.2rem 0.5rem 0.2rem 0.5rem;
+}
+.allBtn{
+    margin: 1rem 0 0 0;
+}
+.checkBtn{
+    cursor: pointer;
+    background-color: skyblue;
+    margin: 0 0.5rem 0 0;
+    padding: 0.2rem 0.5rem 0.2rem 0.5rem;
+}
+
+.errorMessage{
+    margin: 0;
+    padding: 0;
+    font-size: small;
+    color: #e98383;
+}
+.error{
+    border: 2px solid red;
+}
+.inputAddTask{
+    border: 2px solid black;
 }
